# equator

./: Cargo.toml  README.md
equator/: Cargo.toml
equator-macro/: Cargo.toml
equator-macro/src/: lib.rs
equator/src/: decompose.rs  lib.rs  spec.rs  structures.rs  traits.rs
equator/src/spec/: by_val.rs  debug.rs  sized.rs
equator/tests/: test_asm.rs
